# tapvanitygen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
metal/: Makefile  README.md
metal/scripts/: test.sh
metal/shaders/: tap_vanity.metal
metal/src/: main.swift
metal/verify/: Cargo.toml
metal/verify/src/: main.rs
src/: main.rs
web/: index.html  miner.js  secp256k1.js  tap_vanity.wgsl
wgpu/: Cargo.toml  README.md
wgpu/src/: lib.rs  main.rs  tap_vanity.wgsl
wgpu/tests/: e2e.rs
